<resources>
    <string name="app_name">MassFitness</string>
    <string name="url">http://10.0.2.2:8080/massfitness/</string>
    <string name="welcome_massfitness">Welcome to Massfitness!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="new_user">You are new? </string>
    <string name="signup">Sign Up</string>
    <string name="signup_access">Sign up to access MassFitness</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_account">Do you have an account?</string>
    <string name="recover_password">Recover your password</string>
    <string name="send">Send</string>
    <string name="enter_email">Enter your Email</string>
    <string name="error_connection">Connection error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_json">JSON error</string>

    <string name="boxeo">Boxing</string>
    <string name="pilates">Pilates</string>
    <string name="musculacion">Weight Room</string>
    <string name="abdominales">Abs Room</string>
    <string name="yoga">Yoga</string>
    <string name="boxeo_key">Boxeo</string>
    <string name="pilates_key">Pilates</string>
    <string name="musculacion_key">Sala de Musculación</string>
    <string name="abdominales_key">Sala de Abdominales</string>
    <string name="yoga_key">Yoga</string>
</resources>