<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/massfitness_background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/registerImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/massfitness_nobackground"
        android:transitionName="loginImageTrans"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="54dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/bienvenidoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_massfitness"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:transitionName="textTrans"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="252dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/continuarLabel"
        android:transitionName="iniciaSesionTextTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_access"
        android:textColor="@color/darker_grey"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="252dp"
        android:layout_marginStart="18dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColorHint="@color/darker_grey"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/massfitness"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/continuarLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegisterTextField"
        android:transitionName="emailInputTextTrans"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/darker_grey"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/massfitness"
        app:boxStrokeErrorColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contrasenaTextField"
        android:transitionName="passwordInputTextTrans"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/darker_grey"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/massfitness"
        app:boxStrokeErrorColor="@color/red"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/darker_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmarContrasenaTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/darker_grey"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/massfitness"
        app:boxStrokeErrorColor="@color/red"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/darker_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/inicioSesion"
        android:transitionName="buttonLoginTrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/massfitness"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="newUserTrans"
        android:orientation="horizontal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/nuevoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/massfitness"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>