<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/massfitness_background"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/massfitness_nobackground"
        android:transitionName="loginImageTrans"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="54dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/recoverPassword"
        android:transitionName="iniciaSesionTextTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="252dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/enterEmailLabel"
        android:transitionName="iniciaSesionTextTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textColor="@color/darker_grey"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="252dp"
        android:layout_marginStart="18dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        android:transitionName="emailInputTextTrans"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/darker_grey"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/massfitness"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/continuarLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendButton"
        android:transitionName="buttonLoginTrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/massfitness"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>


